--- a/user/requirements.txt
+++ b/user/requirements.txt
@@ -10,10 +10,10 @@ Jinja2==3.1.4
 py-mon==2.0.5
 MarkupSafe==2.1.5
 requests==2.32.3
-urllib3==2.2.2
 watchdog==5.0.0
 Werkzeug==3.0.4
 typing-extensions==4.12.2
 python-graphql-client==0.4.3
 grpcio==1.66.1
 grpcio-tools==1.66.1
+python-dotenv==1.0.1
